increase the icons-action size

--- a/src/table/table.less
+++ b/src/table/table.less
@@ -70,8 +70,7 @@
         .rt-td {
             display: flex;
             align-items: center;
-
-            padding: 8px;
+            padding: 0px;
             border: 0;
             white-space: normal;
         }
@@ -180,12 +179,14 @@
     }
 
     .action-button-wrapper {
-        margin-right: 8px;
+        margin-right: 10px;
+        margin-left: 10px;
 
         .action-button {
             @icon-button-defaults();
-            width: 15px;
-            height: 15px;
+            width: 20px;
+            height: 40px;
+            font-size: 24px;
             padding: 0;
         }
 
