--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -103,10 +103,16 @@
           flex-direction: column;
           align-items: normal;
           margin-left: 6px;
-          padding-top: 5px;
+          padding-top: 3px;
 
-          .node-label-1 {
+          .node-label-0, .node-label-1 {
+            display: inline-block;
+            line-height: 18px;
+          }
+
+          .higlighted-text {
             color: @gray-dark;
+
           }
 
           &.info {
