change the actions position

--- a/src/table/table.less
+++ b/src/table/table.less
@@ -68,9 +68,11 @@
         }
 
         .rt-td {
+            position: relative;
+            height: 40px;
             display: flex;
             align-items: center;
-            padding: 0px;
+            padding: 8px;
             border: 0;
             white-space: normal;
         }
@@ -212,6 +214,8 @@
     }
 
     .table-actions-cell {
+        position: absolute;
+        left: 0px;
         display: flex;
         justify-content: flex-start;
         width: 100%;
