--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -75,6 +75,9 @@
         &.highlighted {
           background: @info-light;
         }
+        &.highlighted + .node-tooltip-note {
+          background: @info-light;
+        }
         &.no-child-node {
           cursor: default;
         }
