Adding expanded Ids and style fixes

--- a/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
+++ b/src/multi-level-checkbox-editor/multi-level-checkbox-editor.less
@@ -140,6 +140,7 @@
           width: 24px;
           height: 24px;
           margin-right: 12px;
+          margin-left: 16px;
         }
 
         .icon-info-tooltip {
