Overview table has cut text in longer lines

--- a/src/table/table.less
+++ b/src/table/table.less
@@ -69,7 +69,7 @@
 
         .rt-td {
             position: relative;
-            height: 40px;
+            min-height: 40px;
             display: flex;
             align-items: center;
             padding: 8px;
