ANALYTICS-2006/ANALYTICS-2163: Introduces password-input component

--- a/src/form/form.less
+++ b/src/form/form.less
@@ -15,7 +15,7 @@
     }
 
     .error {
-        input[type='text'], textarea {
+        input[type='text'], input[type='password'], textarea {
             border-color: @error;
             box-shadow: none;
         }
