ANALYTICS-2006/ANALYTICS-2163: Inherits styles from input-component avoiding less code duplication

--- a/src/input/password-input.less
+++ b/src/input/password-input.less
@@ -1,28 +1,1 @@
-.password-input-component {
-  display: flex;
-
-  .prepend-append {
-    background-color: transparent;
-    line-height: 32px;
-    font-size: 12px;
-    padding-right: 5px;
-    color: @gray-darkest;
-    cursor: default;
-    white-space: nowrap;
-  }
-
-  .input-prepend {
-    .prepend-append();
-  }
-
-  .input-append {
-    .prepend-append();
-  }
-
-  input {
-    &:focus {
-      box-shadow: 0 0 1px fade(@info, 50%);
-      outline: none;
-    }
-  }
-}
+.password-input-component {}
