ANALYTICS-2214 : Provide disable feature for the sidebar node

--- a/src/tree/tree.less
+++ b/src/tree/tree.less
@@ -42,6 +42,22 @@
                 }
             }
         }
+
+        &.disabled {
+            color : @gray-dark;
+            cursor: not-allowed;
+
+            &:hover {
+                .node-label {
+                    color : @gray-dark;
+                    padding-right: 10px;
+                }
+
+                .node-icon {
+                    color : @gray-dark;
+                }
+            }
+        }
     }
 
     .node-content {
