Adds implementation for MessageBox component Due to lacking specs only implemented for `SeverityLevel.INFO`

--- a/src/index.less
+++ b/src/index.less
@@ -10,6 +10,7 @@
 @import 'input/password-input';
 @import 'input/search-input';
 @import 'label/label';
+@import 'message-box/message-box';
 @import 'multi-level-checkbox-editor/multi-level-checkbox-editor';
 @import 'notification/notification';
 @import 'options-slider/options-slider';
