--- a/src/variables.less
+++ b/src/variables.less
@@ -27,6 +27,9 @@
 @warning-light: #FFE7C8;
 @warning: #FB9600;
 
+@purple-light: #E4D7EF;
+@purple: #9765C3;
+
 @primary-color: @info-dark;
 @primary-color-variant: @info;
 @primary-color-darker: @info-darker;
