Adds small layout adjustment

--- a/src/message-box/message-box.less
+++ b/src/message-box/message-box.less
@@ -28,7 +28,9 @@
         }
 
         .message-wrapper {
+            max-width: 690px;
             margin-left: 20px;
+            margin-right: 4px;
 
             .message-box-headline {
                 margin-bottom: 10px;
