--- a/src/message-box/message-box.less
+++ b/src/message-box/message-box.less
@@ -3,6 +3,7 @@
     @icon-outer-circle-width: 12px;
 
     padding: 20px;
+    max-width: 690px;
     background-color: @white;
     box-shadow: 0 0 10px @gray-dark;
 
@@ -34,7 +35,13 @@
 
             .message-box-headline {
                 margin-bottom: 10px;
-                font-size: 18px;
+                font-size: 20px;
+                line-height: 24px;
+            }
+
+            .message-box-message {
+                font-size: 14px;
+                line-height: 21px;
             }
         }
     }
