Fixes `max-width` in MessageBox (#89)
* Fixes `max-width` in MessageBox

* Fixes `width` in MessageBox

--- a/src/message-box/message-box.less
+++ b/src/message-box/message-box.less
@@ -3,7 +3,7 @@
     @icon-outer-circle-width: 12px;
 
     padding: 20px;
-    max-width: 690px;
+    width: 934px;
     background-color: @white;
     box-shadow: 0 0 10px @gray-dark;
 
