--- a/src/input/input.less
+++ b/src/input/input.less
@@ -19,8 +19,11 @@
         .prepend-append();
     }
 
-    input:focus {
-        box-shadow: 0 0 1px fade(@info, 50%);
-        outline: none;
+    input {
+        font-family: @global-font-family;
+        &:focus {
+            box-shadow: 0 0 1px fade(@info, 50%);
+            outline: none;
+        }
     }
 }
