--- a/src/button/button.less
+++ b/src/button/button.less
@@ -2,7 +2,7 @@
     min-width: 85px;
     padding: 10px 18px;
     border: 1px solid transparent;
-
+    border-radius: 1px;
     touch-action: manipulation;
     font-size: 12px;
     line-height: 12px;
