--- a/src/textarea/textarea.less
+++ b/src/textarea/textarea.less
@@ -16,14 +16,13 @@
     }
 
     .text-limit {
-        margin: auto;
         border-radius: 100%;
         height: 12px;
         width: 14px;
         color: @gray-darker;
         text-align: center;
-        margin-top: 5px;
-        letter-spacing: 0px;
+        margin: 5px auto auto;
+        letter-spacing: 0;
         font-size: 10px;
     }
 
@@ -63,12 +62,11 @@
         border-radius: 10px;
     }
 
-    svg {
+    .character-limit-circle {
         height: 24px;
         width: 24px;
         text-align: center;
         margin-left: -30px;
-        -ms-flex-item-align: end;
         align-self: flex-end;
         margin-bottom: 5px;
         font-size: 10px;
