--- a/src/textarea/textarea.less
+++ b/src/textarea/textarea.less
@@ -50,6 +50,8 @@
 
     .character-limited {
         resize: none;
+        scrollbar-color:  @gray-dark;
+        scrollbar-width: 0.3em;
     }
 
     .character-limited::-webkit-scrollbar-track {
