fix refactoring changes

--- a/src/textarea/textarea.less
+++ b/src/textarea/textarea.less
@@ -3,6 +3,7 @@
 
     textarea {
         height: auto;
+        overflow-y: hidden;
 
         &:focus {
             outline: none;
@@ -46,7 +47,6 @@
     .character-limited {
         resize: none;
     }
-
     .character-limit-circle {
         height: 24px;
         width: 24px;
