--- a/src/index.less
+++ b/src/index.less
@@ -26,4 +26,5 @@
 @import 'two-box-multiselect/two-box-multiselect';
 @import 'tree/tree';
 @import 'violation/violation';
+@import 'text-highlighter/text-highlighter';
 
