add blue highlight on focus

--- a/src/textarea/textarea.less
+++ b/src/textarea/textarea.less
@@ -6,7 +6,7 @@
 
         &:focus {
             outline: none;
-            box-shadow: 0 0 1px fade(@info, 50%);
+            box-shadow: 0px 0px 2px @info-light;
         }
 
         &[disabled] {
