--- a/src/input/input.less
+++ b/src/input/input.less
@@ -22,7 +22,7 @@
     input {
         font-family: @global-font-family;
         &:focus {
-            box-shadow: 0 0 1px fade(@info, 50%);
+            box-shadow: 0px 0px 2px @info-light;
             outline: none;
         }
     }
