--- a/src/input/input.less
+++ b/src/input/input.less
@@ -21,8 +21,9 @@
 
     input {
         font-family: @global-font-family;
+
         &:focus {
-            box-shadow: 0px 0px 2px @info-light;
+            box-shadow: 0px 0px 2px @info;
             outline: none;
         }
     }
