--- a/src/input/search-input.less
+++ b/src/input/search-input.less
@@ -10,6 +10,10 @@
     background-color: @white;
     color: @gray-darker;
 
+    &:focus {
+        box-shadow: 0px 0px 2px @info;
+    }
+
     .search-input-icon {
         &-filter {
             @table-search-bar-icon();
@@ -24,6 +28,7 @@
             border: 0;
             color: @gray-darker;
             cursor: pointer;
+
             &:disabled {
                 color: @gray-light;
             }
