--- a/src/textarea/textarea.less
+++ b/src/textarea/textarea.less
@@ -6,7 +6,7 @@
 
         &:focus {
             outline: none;
-            box-shadow: 0px 0px 2px @info-light;
+            box-shadow: 0px 0px 2px @info;
         }
 
         &[disabled] {
