--- a/src/select/select.less
+++ b/src/select/select.less
@@ -20,11 +20,13 @@
     &:focus {
         outline: none;
     }
-
+    
     .disabled {
         color: @gray-light;
     }
-
+    &.selected-active {
+        box-shadow: 0px 0px 2px @info;
+    }
     .select-option-toggle {
         width: 100%;
         height: 34px;
@@ -121,7 +123,9 @@
         left: 0;
         z-index: 1;
         width: 100%;
-
+        &.selected-active {
+            box-shadow: 0px 0px 2px @info;
+        }
         .select-option-items {
             width: 100%;
             max-height: 281px;
