--- a/src/input/search-input.less
+++ b/src/input/search-input.less
@@ -10,7 +10,7 @@
     background-color: @white;
     color: @gray-darker;
 
-    &:focus {
+    &:focus-within {
         box-shadow: 0px 0px 2px @info;
     }
 
