fix border overlap - UMA-270

--- a/src/form/form.less
+++ b/src/form/form.less
@@ -15,7 +15,7 @@
     }
 
     .error {
-        input[type='text'], input[type='password'], textarea {
+        input[type='text'], input[type='password'], textarea, .textarea-input  {
             border-color: @error;
             box-shadow: none;
         }
