fix all font sizes to default 14px

--- a/src/checkbox-table/checkbox-table.less
+++ b/src/checkbox-table/checkbox-table.less
@@ -1,7 +1,7 @@
 @import "~react-table/react-table.css";
 
 .checkbox-table {
-    font-size: 12px;
+    font-size: @base-font-size;
 
     [disabled] {
         cursor: not-allowed;
