--- a/src/form/form.less
+++ b/src/form/form.less
@@ -35,7 +35,7 @@
 }
 
 .form-control {
-    font-size: 12px;
+    font-size: @base-font-size;
     display: block;
     width: 100%;
     height: 34px;
