--- a/src/index.less
+++ b/src/index.less
@@ -27,4 +27,5 @@
 @import 'tree/tree';
 @import 'violation/violation';
 @import 'text-highlighter/text-highlighter';
+@import 'table-with-radio/table-with-radio';
 
