--- a/src/message-box/message-box.less
+++ b/src/message-box/message-box.less
@@ -40,7 +40,7 @@
             }
 
             .message-box-message {
-                font-size: 14px;
+                font-size: @base-font-size;
                 line-height: 21px;
             }
         }
