--- a/src/options-slider/options-slider.less
+++ b/src/options-slider/options-slider.less
@@ -2,6 +2,9 @@
 
 @slider-color: @info-dark;
 
+.rc-slider-mark {
+    font-size: @base-font-size;
+}
 .options-slider {
     padding: 30px 80px 26px 80px;
 
