--- a/src/sidebar/sidebar.less
+++ b/src/sidebar/sidebar.less
@@ -50,7 +50,7 @@
             padding-left: 12px;
             text-align: left;
             user-select: none;
-            font-size: 12px;
+            font-size: @base-font-size;
             list-style: none;
             font-weight: bold;
 
