--- a/src/two-box-multiselect/two-box-multiselect.less
+++ b/src/two-box-multiselect/two-box-multiselect.less
@@ -1,13 +1,10 @@
-@font-size-mid: 12px;
-@font-family: 'Open Sans',Arial,sans-serif;
-
 .two-box-multiselect {
     display: flex;
 
     width: 100%;
 
-    font-size: @font-size-mid;
-    font-family: @font-family;
+    font-size: @base-font-size;
+    font-family: @global-font-family;
     color: @gray-darkest;
 
     * {
