--- a/src/button/button.less
+++ b/src/button/button.less
@@ -4,7 +4,7 @@
     border: 1px solid transparent;
     border-radius: 2px;
     touch-action: manipulation;
-    font-size: 12px;
+    font-size: @base-font-size;
     line-height: 12px;
     font-weight: 600;
     cursor: pointer;
