--- a/src/dialog/dialog.less
+++ b/src/dialog/dialog.less
@@ -32,7 +32,7 @@
 
     &-content {
         line-height: 1.4;
-        font-size: 14px;
+        font-size: @base-font-size;
         box-shadow: 0 2px 20px rgba(0, 0, 0, 0.25);
         background: @white;
         display: table;
@@ -46,7 +46,7 @@
         .btn {
             height: 40px;
             margin-left: 24px;
-            font-size: 14px;
+            font-size: @base-font-size;
         }
 
         &-header {
@@ -57,7 +57,7 @@
 
         &-body {
             background-color: @white;
-            font-size: 14px;
+            font-size: @base-font-size;
             color: @gray-darkest;
             padding: 16px 0px 24px 0px;
             line-height: 1.5;
