--- a/src/form/form-group.less
+++ b/src/form/form-group.less
@@ -8,7 +8,7 @@
 
         .icon {
             color: @info-dark;
-            font-size: 14px;
+            font-size: @base-font-size;
             padding-left: 15px;
             padding-right: 15px;
             width: 20px;
