--- a/src/input/input.less
+++ b/src/input/input.less
@@ -4,7 +4,7 @@
     .prepend-append {
         background-color: transparent;
         line-height: 32px;
-        font-size: 12px;
+        font-size: @base-font-size;
         padding-right: 5px;
         color: @gray-darkest;
         cursor: default;
