--- a/src/label/label.less
+++ b/src/label/label.less
@@ -1,5 +1,5 @@
 .label {
-    font-size: 12px;
+    font-size: @base-font-size;
     display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
