--- a/src/table/table.less
+++ b/src/table/table.less
@@ -1,7 +1,7 @@
 @import "~react-table/react-table.css";
 
 .table {
-    font-size: 12px;
+    font-size: @base-font-size;
 
     @icon-button-defaults: {
         border: none;
