--- a/src/topbar/navigation-items.less
+++ b/src/topbar/navigation-items.less
@@ -18,7 +18,7 @@
         align-items: center;
 
         cursor: pointer;
-        font-size: 14px;
+        font-size: @base-font-size;
         text-transform: uppercase;
 
         @hover: {
