--- a/src/tree/tree.less
+++ b/src/tree/tree.less
@@ -71,7 +71,7 @@
         padding-left: 12px;
         text-align: left;
         user-select: none;
-        font-size: 12px;
+        font-size: @base-font-size;
         list-style: none;
 
         overflow-wrap: normal;
