PLATFORM-5044: fix base font size in select

--- a/src/select/select.less
+++ b/src/select/select.less
@@ -10,7 +10,7 @@
 .select-component {
     color: @gray-darkest;
     position: relative;
-    font-size: @font-size-mid;
+    font-size: @base-font-size;
     font-family: @font-family;
 
     * {
